Revision history for Dist::Zilla::Plugin::Git

{{$NEXT}}

1.100750  2010-03-16 16:25:56 Europe/Paris
 - actually use commit_msg (christopher madsen)
 - Push now logs before pushing (christopher madsen)

1.100741  2010-03-15 18:48:31 Europe/Paris
 - documentation fix for new push_to param

1.100740  2010-03-15 17:28:12 Europe/Paris
 - WARNING: parameter "filename" renamed to "changelog"
 - let commit message include whitespace to next unindented line (david golden)
 - set up remote tracking branch during push testing (david golden)
 - remove unnecessary 'filename' arg from Push (david golden)
 - add 'push_to' argument to Push for multi-repo pushes (david golden)
 - give back user possibility to create lightweight tag, default remains
   annotated tags (christopher madsen)
 - allow user to change commit message (christopher madsen)
 - allow user to specify files allowed to be dirty for check & commit (christopher madsen)
 - refactored allow_dirty in dz:role:git:dirtyfiles (christopher madsen)

1.100690  2010-03-10 13:20:37 Europe/Paris
 - fix tests to work even when no global git config exists
 - refactored commit message generation (christopher madsen)

1.100681  2010-03-09 17:26:14 Europe/Paris
 - bumping minimum dzil version requirement

1.100680  2010-03-09 17:07:45 Europe/Paris
 - using annotated tags instead of lightweight tags (rt#55352)
 - minor pod update

1.100660  2010-03-07 13:41:39 Europe/Paris
 - fix tests to work with git 1.7.0
 - fix tests to work with current Dist::Zilla (Ricardo Signes)
 - provide shorter plugin names to bundle contents (Ricardo Signes)

1.100430  2010-02-12 13:11:39 Europe/Paris
 - WARNING: no more makefile.pl supplied, only a build.pl
 - using path::class in the tests

1.093410  2009-12-07 09:13:07 Europe/Paris
 - require file::path 2.07 for remove_tree

1.093300  2009-11-26 11:02:22 Europe/Paris
 - new param tag_format for dzp:git:tag (ricardo signes)

1.093260  2009-11-22 11:35:00 Europe/Paris