@@ -1,6 +1,7 @@
 Revision history for Dist::Zilla::Plugin::Git
 
 {{$NEXT}}
+ - add a BeforeRelease check in Tag to prevent re-releases (christopher madsen)
 
 1.100750  2010-03-16 16:25:56 Europe/Paris
  - actually use commit_msg (christopher madsen)
